@@ -61,7 +61,7 @@ public class Principal {
         List<Serie> series = new ArrayList<>();
         series = dadosSeries.stream()
                 .map(Serie::new)
-                .toList();
+                .collect(Collectors.toList());
         series.stream()
                 .sorted(Comparator.comparing(Serie::getGenero))
                 .forEach(System.out::println);
